--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <p>Enter number of squares per side:</p>
+    <input id="size" type="number">
+    <button id="go" onclick="resetGrid()">New Grid</button>
     <div class="grid">
 
     </div>
